Wed, 29 Mar 2006 13:29:51 +0200 <thp@perli.net>
	* Only create one localDB object in the main gPodder window
	* localDB is now caching data read from localDB XML files
	* localDB cache is cleared when a download is completed
	* Applied patch from Alain Tauch (bad URL "Add channel.." fix)
	* Updated AUTHORS, TODO, contributors list, pushed version date

Tue, 28 Mar 2006 20:30:00 +0200 <thp@perli.net>
	* Disable some menu items when not on "available" tab
	* Reload the localDB only when changing to "downloaded" tab

Fri, 24 Mar 2006 19:34:21 +0100 <thp@perli.net>
	+ Applied yet another patch from Alain (delete downloaded podcasts)
	* Delete empty local db index.xml files when no items left
	* Updated TODO list

Sun, 19 Mar 2006 18:38:42 +0100 <thp@perli.net>
	+ Applied another patch from A. Tauch (stripHTML enhancements)

Sun, 19 Mar 2006 15:11:32 +0100 <thp@perli.net>
	+ Applied two patches from A. Tauch <contrib@maisondubonheur.com>:
	* fix for local db writer's encoding -> is now really iso-8859-1)
	* fixed race condition bug which made some episodes to disappear

Sat, 04 Mar 2006 21:36:56 +0100 <thp@perli.net>
	+ Added channel info + general/advanced tabs to channel editor
	+ Added channel info/edit button to gPodder main window view
	+ Added episode info dialog + open on double-click (available list)
	* Fixed getPodcastFilename (returned wrong value)
	+ Added Adrien Beaucreux to list of authors/contributors
	+ Added Tooltips object + tooltip for info/edit button
	* Fixed addDownloadedItem (getChannelIndexFiles doesn't exist anymore)
	* Removed URL display in gPodder main window channel combobox
	* Updated TODO-List

Fri, 03 Mar 2006 20:59:17 +0100 <thp@perli.net>
	* Applied patch from informancer@web.de (see below)
	- Reverted to old-style channel properties dialog for now
	* Changed debug output to only output when debugging ;)

Sun, 26 Feb 2006 00:11:28 +0100 <thp@perli.net>
	* Bumped version number and date in bin/gpodder
	* Updated TODO-List