@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH GPODDER "1" "February 2006" "gpodder 0.6-svn 2006-02-26" "User Commands"
+.TH GPODDER "1" "March 2006" "gpodder 0.6-svn 2006-03-29" "User Commands"
 .SH NAME
-gpodder \- manual page for gpodder 0.6-svn 2006-02-26
+gpodder \- manual page for gpodder 0.6-svn 2006-03-29
 .SH DESCRIPTION
 usage: gpodder [options] arg1 arg2
 .PP
