@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Mar 29 13:29:26 2006
+# Generated on Wed Mar 29 14:07:45 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -214,11 +214,11 @@ class Gpodder(SimpleGladeApp):
             dlg.destroy()
             print "probably no feeds or channels found"
     
-    def not_implemented( self, message = "some unknown function"):
+    def showMessage( self, message = "some unknown function", title = "gPodder message"):
         dlg = gtk.MessageDialog( self.gPodder, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_OK)
-        dlg.set_title( "Release early, release often!")
-        dlg.set_markup( "<big>Woohoo! You've found a secret..</big>\n\nSorry, but due to the fact that this is just a pre-release, the lazy programmer has just forgotten to implement\n\n<b>" + message + "</b>\n\nHe promises he will in the next release!")
-
+        dlg.set_title( title)
+        dlg.set_markup( message)
+        
         dlg.run()
         dlg.destroy()
 
@@ -317,7 +317,6 @@ class Gpodder(SimpleGladeApp):
     def on_itemPreferences_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemPreferences_activate called with self.%s" % widget.get_name()
-        #self.not_implemented( "the preferences dialog")
         Gpodderproperties()
     #-- Gpodder.on_itemPreferences_activate }
 
@@ -325,7 +324,9 @@ class Gpodder(SimpleGladeApp):
     def on_itemAddChannel_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemAddChannel_activate called with self.%s" % widget.get_name()
-        result = Gpodderchannel().requestURL()
+        ch = Gpodderchannel()
+        ch.entryURL.set_text( "http://")
+        result = ch.requestURL()
         if result != None and result != "" and (result[:4] == "http" or result[:3] == "ftp"):
             if libgpodder.isDebugging():
                 print "will ADD: " + result
@@ -333,6 +334,7 @@ class Gpodder(SimpleGladeApp):
             channel_new = podcastChannel( result)
             channel_new.shortname = "__unknown__"
             self.channels.append( channel_new)
+            channels_should_be = len( self.channels)
             
             # fetch metadata for that channel
             gPodderChannelWriter().write( self.channels)
@@ -342,15 +344,21 @@ class Gpodder(SimpleGladeApp):
             gPodderChannelWriter().write( self.channels)
             self.channels = gPodderChannelReader().read( False)
             
+            # check if gPodderChannelReader has successfully added the channel
+            if channels_should_be > len( self.channels):
+                self.showMessage( "There has been an error adding the channel.\nMaybe the URL is wrong?")
+            
             self.updateComboBox()
             self.statusLabel.set_text( "")
+        else:
+            if result != None and result != "":
+                self.showMessage( "Could not add new channel.\nOnly <b>http://</b> and <b>ftp://</b> URLs supported at the moment.")
     #-- Gpodder.on_itemAddChannel_activate }
 
     #-- Gpodder.on_itemEditChannel_activate {
     def on_itemEditChannel_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemEditChannel_activate called with self.%s" % widget.get_name()
-        # IMPLEMENTED 20051208 self.not_implemented( "the edit channel dialog")
         active = self.active_channel
         url_old = self.channels[active].url
         title_old = self.channels[active].title
@@ -395,14 +403,13 @@ class Gpodder(SimpleGladeApp):
             self.channels = gPodderChannelReader().read( False)
             self.updateComboBox()
         except:
-            print "could not delete - nothing selected, probably"
+            self.showMessage( "Could not delete channel.\nProbably no channel is selected.")
     #-- Gpodder.on_itemRemoveChannel_activate }
 
     #-- Gpodder.on_itemExportChannels_activate {
     def on_itemExportChannels_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemExportChannels_activate called with self.%s" % widget.get_name()
-        #self.not_implemented( "the export feature") IMPLEMENTED AS OF 20051208
         dlg = gtk.FileChooserDialog( title="Export to OPML...", parent = None, action = gtk.FILE_CHOOSER_ACTION_SAVE)
         dlg.add_button( gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL)
         dlg.add_button( gtk.STOCK_SAVE, gtk.RESPONSE_OK)
@@ -474,7 +481,7 @@ class Gpodder(SimpleGladeApp):
         
         current_channel = self.channels[self.active_channel]
         current_podcast = current_channel.items[self.active_item]
-        filename = gPodderLib().getPodcastFilename( current_channel, current_podcast.url)
+        filename = current_channel.getPodcastFilename( current_podcast.url)
         if widget.get_name() == "treeAvailable":
             Gpodderepisode().set_episode( current_podcast)    
             return
@@ -482,10 +489,7 @@ class Gpodder(SimpleGladeApp):
         if os.path.exists( filename) == False and self.download_status_manager.is_download_in_progress( current_podcast.url) == False:
             downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title, current_channel, current_podcast, self.ldb).download()
         else:
-            message_dialog = gtk.MessageDialog( self.gPodder, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_OK)
-            message_dialog.set_markup( "<big><b>Already downloaded</b></big>\n\nYou have already downloaded this episode.\nOr you are currently downloading it.")
-            message_dialog.run()
-            message_dialog.destroy()
+            self.showMessage( "<big><b>Already downloaded</b></big>\n\nYou have already downloaded this episode.\nOr you are currently downloading it.")
     #-- Gpodder.on_treeAvailable_row_activated }
 
     #-- Gpodder.on_btnDownload_clicked {
@@ -504,6 +508,8 @@ class Gpodder(SimpleGladeApp):
         if selection_iter != None:
             url = self.download_status_manager.tree_model.get_value( selection_iter, 3)
             self.download_status_manager.cancel_by_url( url)
+        else:
+            self.showMessage( "No episode selected - nothing cancelled.")
     #-- Gpodder.on_treeDownloads_row_activated }
 
     #-- Gpodder.on_btnCancelDownloadStatus_clicked {
@@ -558,15 +564,19 @@ class Gpodder(SimpleGladeApp):
 
         selection_tuple = self.treeDownloaded.get_selection().get_selected()
         selection_iter = selection_tuple[1]
-        url = self.treeDownloaded.get_model().get_value( selection_iter, 0)
-        title = self.treeDownloaded.get_model().get_value( selection_iter, 1)
-        filename_final = localDB().getLocalFilenameByPodcastURL( channel_filename, url)
-
-        current_channel = self.downloaded_channels[self.comboDownloaded.get_active()]
-        if current_channel.deleteDownloadedItemByUrlAndTitle( url, title):
-            gPodderLib().deleteFilename( filename_final)
-            self.updateComboBox()
-            self.updateDownloadedComboBox()
+        try:
+            url = self.treeDownloaded.get_model().get_value( selection_iter, 0)
+            title = self.treeDownloaded.get_model().get_value( selection_iter, 1)
+            filename_final = localDB().getLocalFilenameByPodcastURL( channel_filename, url)
+            current_channel = self.downloaded_channels[self.comboDownloaded.get_active()]
+            if current_channel.deleteDownloadedItemByUrlAndTitle( url, title):
+                gPodderLib().deleteFilename( filename_final)
+                # clear local db cache so we can re-read it
+                self.ldb.clear_cache()
+                self.updateComboBox()
+                self.updateDownloadedComboBox()
+        except:
+            self.showMessage( "Could not delete selected item.\nHave you selected an episode to delete?")
     #-- Gpodder.on_btnDownloadedDelete_clicked }
 
 
