@@ -4,6 +4,10 @@ Wed, 29 Mar 2006 13:29:51 +0200 <thp@perli.net>
 	* localDB cache is cleared when a download is completed
 	* Applied patch from Alain Tauch (bad URL "Add channel.." fix)
 	* Updated AUTHORS, TODO, contributors list, pushed version date
+	* Moved getPodcastFilename/podcastFilenameExists into podcastChannel
+	* Added showMessage function to main gPodder window
+	* Use showMessage function to show error messages GUI-wise
+	* Removed orphaned code parts for "not_implemented" function
 
 Tue, 28 Mar 2006 20:30:00 +0200 <thp@perli.net>
 	* Disable some menu items when not on "available" tab
